# myProject

./: manage.py  pyproject.toml
core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: populate_test_data.py
core/migrations/: 0001_initial.py  0002_alter_userprofile_organization.py  0003_specialistdismissalreport.py  0004_remove_specialistdismissalreport_rep_beg_period_and_more.py  0005_specialistdismissalreport_term_expired_distribution.py
core/tests/: test_models.py  test_views.py
templates/: report.html
young_specialists/: asgi.py  settings.py  urls.py  wsgi.py
young_specialists/migrations/: 0001_source_table.py
